8217345: [TESTBUG] JFR TestShutdownEvent fails due to improper use of Unsafe
Added proper use of Unsafe

Reviewed-by: egahlin